--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  lint: ^1.4.0-dev.d210.1
+  animated_text_kit: ^3.1.0
+
 
 dev_dependencies:
+  lint: ^1.4.0-dev.d210.1
   flutter_test:
     sdk: flutter
 
